--- a/mainsite/static/ogf/css/mainstyle.scss
+++ b/mainsite/static/ogf/css/mainstyle.scss
@@ -43,6 +43,9 @@ a {
 /* ************************************ */
 /* MISC  */
 
+.bigbol {
+  font-weight: bold;
+}
 .red {
   color:              $col-ogfred !important;
 }
