--- a/spe_blog/templates/spe_blog/plugins/article_editorial.html
+++ b/spe_blog/templates/spe_blog/plugins/article_editorial.html
@@ -3,7 +3,7 @@
 {% for article in articles %}
     {% if forloop.first %}
         <a href="{{ article.get_absolute_url }}">
-        <div class="tile-editorial row" style="background-color:{{ backcol }};">
+        <div class="tile-editorial {% if fixedheight %}tile-editorial-fixed{% endif %} {% if whitetext %}tile-editorial-txtwht{% else %}tile-editorial-txtblck{% endif %} row" style="background-color:{{ backcol }};">
             <div class="col-xs-12 title1">{{ article.editorial_title }}</div>
             <div class="col-xs-12 dottedspacer">&nbsp;</div>
             <div class="col-xs-12 title2">{{ article.title }}</div>
