Small Fixes to H1 vs H2+

--- a/mainsite/templates/x_aldryn_newsblog/two_column.html
+++ b/mainsite/templates/x_aldryn_newsblog/two_column.html
@@ -17,7 +17,7 @@
                         </figure>
                     </div>
                     <header id="article-info">
-                        <h1>{% placeholder "story-title" %}</h1>
+                        <h2 class="tiletitles">{% placeholder "story-title" %}</h2>
                         <span class="author">By <span>{% placeholder "story-author" %}</span></span>
                         <span class="pub-date">{% placeholder "story-date" %}</span>
                     </header>
