--- a/spe_blog/templates/spe_blog/brief_detail.html
+++ b/spe_blog/templates/spe_blog/brief_detail.html
@@ -11,7 +11,7 @@
     </div>
     <div class="row content-area articleContent">
         <div class="col-sm-8 col-lg-7 col-lg-offset-1 areaContent">
-            <h1>{{ brief.title }}</h1>
+            <h2 class="tiletitles">{{ brief.title }}</h2>
 
         {% if brief.picture and brief.picture.url %}
             <img src={{brief.picture.url}} class="img-rounded" alt={{brief.alternate}} width="600" height="400">
@@ -24,7 +24,7 @@
 
             <div class="row">
                 <hr class="tiletitlehr">
-                <h1 class="tiletitles">CURRENT ISSUE</h1>
+                <h2 class="tiletitles">CURRENT ISSUE</h2>
             </div>
 
             {% if brief.publication.code != "WWW" %}
