--- a/mainsite/templates/ogf_base.html
+++ b/mainsite/templates/ogf_base.html
@@ -62,7 +62,7 @@
             </div>
             <div class="col-md-8 col-lg-7 text-right">
                 <ul class="pubMenu">
-                    {% show_menu 0 100 100 100 %}
+                    {% show_menu 1 %}
                     <li class="searchIcon"><a role="button" data-toggle="collapse" href="#collapseSearch" aria-expanded="false" aria-controls="collapseExample"><i class="fa fa-search"></i></a></li>
                 </ul>
             </div>
