Responsive images in Article Body Text Area

--- a/spe_blog/templates/spe_blog/plugins/article_detail.html
+++ b/spe_blog/templates/spe_blog/plugins/article_detail.html
@@ -122,3 +122,10 @@
         {% endfor %}
     {% endif %}
 </div>
+    <script type="text/javascript" charset="utf-8">
+        $( document ).ready(function() {
+
+            $(".articleBodyText img").addClass("img-responsive");
+
+        });
+    </script>
