--- a/mainsite/static/ogf/css/mainstyle.css
+++ b/mainsite/static/ogf/css/mainstyle.css
@@ -238,6 +238,8 @@ a:hover { text-decoration: none; }
 .article-topics ul li a, .article-tags ul li a { padding: 5px; }
 .article-topics ul li a:hover, .article-tags ul li a:hover { background-color: grey; color: white; }
 
+.articleDate { white-space: nowrap; }
+
 .techFocusBox, .columnBox { padding: 0 10px 0 0; }
 
 /* ********************************** */
