--- a/spe_blog/templates/spe_blog/plugins/article_editorial.html
+++ b/spe_blog/templates/spe_blog/plugins/article_editorial.html
@@ -9,7 +9,7 @@
             <div class="col-xs-12 title2">{{ article.title }}</div>
             <div class="col-xs-12 excerpt">{{ article.teaser }}</div>
             <div class="col-xs-12 dottedspacer">&nbsp;</div>
-            <div class="col-xs-4 authorImg"><img class="img-responsive" src=/media/{{ article.author_picture }}></div>
+            <div class="col-xs-4 authorImg"><img class="img-responsive" src={{article.author_picture.url}}></div>
             <div class="col-xs-8 authorBio">{{ article.author_bio | safe }}</div>
         </div>
         </a>
