--- a/spe_blog/templates/spe_blog/issues.html
+++ b/spe_blog/templates/spe_blog/issues.html
@@ -40,7 +40,7 @@
                         {% endifchanged %}
                     {% endif %}
                         <div class="col-sm-4 issueItem text-center">
-                            <a href="{{ issue.issue_url }}" class="issueLink" target="_blank">
+                            <a href="{{ issue.get_absolute_url }}" class="issueLink" target="_blank">
                                 <img src="{{ issue.cover.url }}" class="img-responsive">
                                 <p class="issueDate">{{ issue.date }}</p>
                                 <p class="issueVolNum">Volume {{ issue.print_volume }} | Number {{ issue.print_issue }}</p>
