--- a/spe_blog/templates/spe_blog/plugins/article_detail.html
+++ b/spe_blog/templates/spe_blog/plugins/article_detail.html
@@ -15,7 +15,8 @@
         </div>
         <div class="col-xs-12 dottedSpacer"></div>
     </div>
-{% if article.topics %}
+
+{% if article.topics.all %}
     <div class="row">
         <div class="col-sm-12 article-topics dontPrintMe">
             <h4>Topics</h4>
