--- a/spe_blog/templates/spe_blog/plugins/article_editorial.html
+++ b/spe_blog/templates/spe_blog/plugins/article_editorial.html
@@ -13,6 +13,7 @@
             <div class="col-xs-8 authorBio">{{ article.author_bio | safe }}</div>
         </div>
         </a>
+        <div class="articleListLink"><a href="{{ show_all_url }}">{{ show_all_text }}</a></div>
     {% endif %}
 {% empty %}
     <p class="well">{% trans "No editorial available" %}</p>
