--- a/spe_blog/templates/spe_blog/plugins/article_editorial.html
+++ b/spe_blog/templates/spe_blog/plugins/article_editorial.html
@@ -13,7 +13,9 @@
             <div class="col-xs-8 authorBio">{{ article.author_bio | safe }}</div>
         </div>
         </a>
-        <div class="articleListLink"><a href="{{ show_all_url }}">{{ show_all_text }}</a></div>
+        {% if show_all_url and show_all_text %}
+            <div class="row"><div class="col-xs-12 see-all-div"><a class="see-all" id="features" href="{{ show_all_url }}">{{ show_all_text }}<span></span><i class="fa fa-chevron-circle-right" aria-hidden="true"></i></a></div></div>
+        {% endif %}
     {% endif %}
 {% empty %}
     <p class="well">{% trans "No editorial available" %}</p>
