fixed image problem

--- a/mainsite/templates/plugins/tile_img_back.html
+++ b/mainsite/templates/plugins/tile_img_back.html
@@ -1,6 +1,6 @@
 {% autoescape off %}
     <a href="{{ link }}" target="_blank">
-        <div class="tile tileImgBack" style="background-image: url('/media/{{ image }}')">
+        <div class="tile tileImgBack" style="background-image: url('{{ image.url }}')">
             <div class="whiteFade">
                 <div class="tiletitles">{{ title }}</div>
                 <div class="tileDate">{{ date | date:"d F Y" }}</div>
