removing the setting of size to go to 100%; if stuff breaks look and feel change back before this one.

--- a/spe_blog/templates/spe_blog/plugins/topics_list.html
+++ b/spe_blog/templates/spe_blog/plugins/topics_list.html
@@ -1,7 +1,7 @@
 {% load cms_tags sekizai_tags divideby %}
 
 {% block content %}
-    <div class="tile col-sm-10 col-md-9 col-lg-8 topicListBox">
+    <div class="tile topicListBox">
     {% if topics %}
 
         <div class="row">
