--- a/spe_blog/templates/spe_blog/plugins/topics_list_1col.html
+++ b/spe_blog/templates/spe_blog/plugins/topics_list_1col.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     {% if topics %}
-        <div class="tile col-sm-6 col-md-5 col-lg-4 topicListBox">
+        <div class="tile topicListBox">
             <div class="row topicListColumnOne">
             {% for topic in topics %}
 
