First Pass at Tags

--- a/spe_blog/templates/spe_blog/plugins/article_detail.html
+++ b/spe_blog/templates/spe_blog/plugins/article_detail.html
@@ -48,7 +48,7 @@
         <div class="col-sm-12 article-tags">
             <ul>
             {% for tag in article.tags.all %}
-                    <li><!-- a href="/ogf/topics/?topic=/}" --><i class="fa fa-tags" aria-hidden="true"></i> {{ tag }}<!-- /a --></li>
+                    <li><a href="{{ article.publication.tags_url.url.get_absolute_url }}?tag={{ tag.id }}"><i class="fa fa-tags" aria-hidden="true"></i> {{ tag }}</a></li>
             {% endfor %}
             </ul>
         </div>
