--- a/spe_blog/templates/spe_blog/backup/featured_image_left_original.html
+++ b/spe_blog/templates/spe_blog/backup/featured_image_left_original.html
@@ -3,7 +3,7 @@
 {% for article in article_list %}
     {% if instance.hide_featured and not article.is_featured %}
     <article class="tile white story{% if not article.published %} unpublished{% endif %}{% if article.future %} future{% endif %}">
-    <a href="{{ article.get_absolute_url }}" target="_blank">
+    <a href="{{ article.get_absolute_url }}">
         <div class="story-wrap">
             {% if article.picture.url %}
             <figure class="thumb">
