--- a/spe_blog/templates/spe_blog/backup/image_left_plugin.html
+++ b/spe_blog/templates/spe_blog/backup/image_left_plugin.html
@@ -1,6 +1,6 @@
 -- image left plugin --
     <article class="tile white story">
-    <a href="{{ article.get_absolute_url }}" target="_blank">
+    <a href="{{ article.get_absolute_url }}">
         <div class="story-wrap">
             {% if article.picture.url %}
             <figure class="thumb">
