--- a/spe_blog/templates/spe_blog/plugins/issues_by_year.html
+++ b/spe_blog/templates/spe_blog/plugins/issues_by_year.html
@@ -36,7 +36,7 @@
             {% endifchanged %}
 
             <div class="col-sm-4 issueItem text-center">
-                <a href="{{ issue.get_absolute_url }}" class="issueLink" target="_blank">
+                <a href="{{ issue.get_absolute_url }}" class="issueLink">
                     <img src="{{ issue.cover.url }}" class="img-responsive">
                     <p class="issueDate">{{ issue.date }}</p>
                     <p class="issueVolNum">Volume {{ issue.print_volume }} | Number {{ issue.print_issue }}</p>
