--- a/spe_blog/templates/spe_blog/plugins/overlay.html
+++ b/spe_blog/templates/spe_blog/plugins/overlay.html
@@ -1,7 +1,7 @@
 {% for article in articles %}
     {% if article.picture and article.picture.url %}
         <article class="tile whiteback featured-story">
-            <a href="{{ article.get_absolute_url }}" target="_blank">
+            <a href="{{ article.get_absolute_url }}">
             <div class="story-wrap" style="background-image:url({{ article.picture.url }});">
                 <div class="story-text">
                     <h2>{{ article.title }}</h2>
