content area css width fix

--- a/mainsite/static/ogf/css/_ogfcontent.scss
+++ b/mainsite/static/ogf/css/_ogfcontent.scss
@@ -5,8 +5,9 @@
 
 .content-area {
   padding:                0 15px;
+  //max-width:              1200px;
+  //margin:                 auto;
 }
-
 .page-content {
   margin-top:             25px;
 }
