--- a/mainsite/templates/ogf_base.html
+++ b/mainsite/templates/ogf_base.html
@@ -58,7 +58,7 @@
 
         <div class="row dontPrintMe" id="menubar">
             <div class="col-xs-12 col-sm-4 col-md-3 col-lg-offset-1" id="mainLogo">
-                <a href="/ogf/ogf-home/"><img src="{% static 'ogf/img/ogf-logo-horizontal.svg' %}" class="img-responsive"></a>
+                <a href="/ogf/ogf-main-page/"><img src="{% static 'ogf/img/ogf-logo-horizontal.svg' %}" class="img-responsive"></a>
             </div>
             <div class="col-md-8 col-lg-7 text-right">
                 <ul class="pubMenu">
@@ -102,50 +102,46 @@
         <div class="footerURight col-md-9">
             <div class="col-md-2 col-md-offset-1">
                 <h3>MAIN</h3>
-                <p><a>Topics</a></p>
-                <p><a>Technology</a></p>
-                <p><a>News</a></p>
-                <p><a>People</a></p>
-                <p><a>Papers</a></p>
-                <p><a>Magazine</a></p>
+                <p><a href="/ogf/topics/">Topics</a></p>
+                <p><a href="/ogf/people/">People</a></p>
+                <p><a href="/ogf/peer-reviewed-papers/">Papers</a></p>
+                <p><a href="/ogf/issues/">Archive</a></p>
             </div>
             <div class="col-md-3">
                 <h3>DEPARTMENTS</h3>
-                <p><a>From the PFC Technical Director</a></p>
-                <p><a>Culture Matters</a></p>
-                <p><a>Global Market Trends</a></p>
-                <p><a>PFC Roundup</a></p>
-                <p><a>Technology Marketplace</a></p>
-                <p><a>Calendar</a></p>
-                <p><a>Peer-Reviewed Papers</a></p>
+                <p><a href="/ogf/pfc-director/">From the PFC Technical Director</a></p>
+                <p><a href="/ogf/culture-matters/">Culture Matters</a></p>
+                <p><a href="/ogf/global-market-trends/">Global Market Trends</a></p>
+                <p><a href="/ogf/pfc-roundup/">PFC Roundup</a></p>
+                <p><a href="/ogf/technology-marketplace/">Technology Marketplace</a></p>
+{#                <p><a>Calendar</a></p>#}
+                <p><a href="/ogf/peer-reviewed-papers/">Peer-Reviewed Papers</a></p>
             </div>
             <div class="col-md-3">
                 <h3>UTILITY</h3>
-                <p><a>About</a></p>
-                <p><a>Contact</a></p>
-                <p><a>Subscribe</a></p>
-                <p><a>Advertise</a></p>
-                <p><a>Archive</a></p>
-                <p><a>Submit a Paper<br>for Peer Review</a></p>
+                <p><a href="/ogf/about-ogf/">About</a></p>
+                <p><a href="http://www.spe.org/contact/">Contact</a></p>
+                <p><a href="http://www.spe.org/publications/subscribe.php">Subscribe</a></p>
+                <p><a href="http://www.spe.org/sales/publications.php">Advertise</a></p>
             </div>
             <div class="col-md-3">
                 <h3>SPE</h3>
-                <p><a>SPE</a></p>
+                <p><a href="http://www.spe.org/">SPE</a></p>
                 <p><a>JPT</a></p>
-                <p><a>OGF</a></p>
+                <p><a href="/ogf/ogf-main-page/">OGF</a></p>
                 <p><a>SPE Journals</a></p>
                 <p><a>HSE Now</a></p>
             </div>
         </div>
     </div>
     <div class="footerLower dontPrintMe">
-        <img src="{% static 'ogf/img/spe-logo-icon.svg' %}"/>
+        <a href="http://www.spe.org/"><img src="{% static 'ogf/img/spe-logo-icon.svg' %}"/></a>
         <ul class="footerSPEMenu">
-            <li><a href="">MEMBERSHIP</a></li>
-            <li><a href="">EVENTS</a></li>
-            <li><a href="">PUBLICATIONS</a></li>
-            <li><a href="">TRAINING</a></li>
-            <li><a href="">RESOURCES</a></li>
+            <li><a href="http://www.spe.org/members/">MEMBERSHIP</a></li>
+            <li><a href="http://www.spe.org/events/about-events.php">EVENTS</a></li>
+            <li><a href="http://www.spe.org/publications/">PUBLICATIONS</a></li>
+            <li><a href="http://www.spe.org/training/">TRAINING</a></li>
+            <li><a href="http://www.spe.org/industry/">RESOURCES</a></li>
         </ul>
     </div>
     <!-- FOOTER END -->
