added placeholders for adzones 1 & 2. Zone 3 will be free floating.

--- a/mainsite/templates/include_hide_ads.html
+++ b/mainsite/templates/include_hide_ads.html
@@ -11,11 +11,11 @@
                 $("#adZone1").hide(0);
             }
 
-            if ($(".adZone2").find("img").length > 0) {
+            if ($("#adZone2").find("img").length > 0) {
                 //do something
             } else {
                 // do something else
-                $(".adZone2").hide(0);
+                $("#adZone2").hide(0);
             }
 
         });
