--- a/mainsite/static/ogf/css/_adzones.scss
+++ b/mainsite/static/ogf/css/_adzones.scss
@@ -4,28 +4,7 @@
 @import 'vars';
 
 
-.adZone1 {
-  #adLeaderboard {
-    height:               140px;
-    padding:              27px 0 0 0;
-  }
-  #adLeaderboardImg {
-    margin:               auto;
-  }
-}
 
-/* AD Zone2 */
-#adFold, .adZone2 {
-  padding:15px 0;
-  margin: 15px 0;
-  //border-top: $dotted;
-  background-color:$col-ogfnotsolightgrey;
-
-  div {
-    padding-right:0;
-    padding-left:0;
-  }
-}
 
 .adZone6 {
   background-color: $col-ogflightgrey2;
@@ -41,4 +20,42 @@
   margin-bottom:        20px;
   padding:              15px;
   background-color:     $col-ogflightgrey;
+}
+
+/* AD Zone1 */
+.adZone1 {
+  #adLeaderboard {
+    height:               140px;
+    padding:              27px 0 0 0;
+
+    .tile-adspeed {
+      padding: 0px;
+      -webkit-box-shadow: none;
+      -moz-box-shadow: none;
+      box-shadow: none;
+    }
+  }
+  #adLeaderboardImg {
+    margin:               auto;
+  }
+}
+
+/* AD Zone2 */
+#adFold, .adZone2 {
+  padding:15px 0;
+  margin: 15px 0;
+  //border-top: $dotted;
+  background-color:$col-ogfnotsolightgrey;
+
+  .tile-adspeed {
+      box-shadow: none;
+      margin-bottom: 0;
+      padding: 0;
+      background-color: transparent;
+  }
+
+  div {
+    padding-right:0;
+    padding-left:0;
+  }
 }
