--- a/mainsite/static/ogf/css/mainstyle.css
+++ b/mainsite/static/ogf/css/mainstyle.css
@@ -527,18 +527,21 @@ table th, table td { padding: 5px; }
 /* VARIABLES
 ====================================================================== */
 /* Images */
-.adZone1 #adLeaderboard { height: 140px; padding: 27px 0 0 0; }
-.adZone1 #adLeaderboardImg { margin: auto; }
-
-/* AD Zone2 */
-#adFold, .adZone2 { padding: 15px 0; margin: 15px 0; background-color: #e4e1d8; }
-#adFold div, .adZone2 div { padding-right: 0; padding-left: 0; }
-
 .adZone6 { background-color: #f4f4f4; padding: 0; margin-bottom: 20px; }
 
 .adZone6 { padding: 15px; }
 
 .tile-adspeed { box-shadow: 0 1px 2px #b4b4b9; margin-bottom: 20px; padding: 15px; background-color: #f2efea; }
+
+/* AD Zone1 */
+.adZone1 #adLeaderboard { height: 140px; padding: 27px 0 0 0; }
+.adZone1 #adLeaderboard .tile-adspeed { padding: 0px; -webkit-box-shadow: none; -moz-box-shadow: none; box-shadow: none; }
+.adZone1 #adLeaderboardImg { margin: auto; }
+
+/* AD Zone2 */
+#adFold, .adZone2 { padding: 15px 0; margin: 15px 0; background-color: #e4e1d8; }
+#adFold .tile-adspeed, .adZone2 .tile-adspeed { box-shadow: none; margin-bottom: 0; padding: 0; background-color: transparent; }
+#adFold div, .adZone2 div { padding-right: 0; padding-left: 0; }
 
 /* ************************************ */
 /* MISC  */
