--- a/mainsite/templates/ogf_base.html
+++ b/mainsite/templates/ogf_base.html
@@ -22,13 +22,11 @@
 
 {% block content_header %}
     <!-- HEADER Begin -->
-{#        <div class="row adZone1" id="adZone1">#}
-{#            <div class="col-md-12 text-center" id="adLeaderboard">#}
-{#                <!-- AdSpeed.com Tag 8.0.2 for [Zone] OGF 1 728x90 [Any Dimension] -->#}
-{#                <script type="text/javascript" src="http://g.adspeed.net/ad.php?do=js&zid=79084&oid=7699&wd=-1&ht=-1&target=_blank&noerror=1"></script>#}
-{#                <!-- AdSpeed.com End -->#}
-{#            </div>#}
-{#        </div>#}
+        <div class="row adZone1" id="adZone1">
+            <div class="col-md-12 text-center" id="adLeaderboard">
+                {% placeholder "ad zone 1" %}
+            </div>
+        </div>
 
         <div class="row dontPrintMe" id="topbar">
             <div class="col-sm-6 topbarcol">
