--- a/mainsite/static/ogf/css/_tiles.scss
+++ b/mainsite/static/ogf/css/_tiles.scss
@@ -550,3 +550,11 @@
       margin-top: 15px;
   }
 }
+.coverblurb {
+  font-size: 14px;
+  line-height: 14px;
+}
+.covercredit {
+  margin: 10px 0 0 0;
+  font-size: 10px;
+}
